--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,6 +15,7 @@
             <div><label> Password: <input type="password" name="password"/> </label></div>
             <div><label> First Name: <input type="text" name="firstName"/> </label></div>
             <div><label> Last Name: <input type="text" name="lastName"/> </label></div>
+            <div><label> Department: <input type="text" name="department"/> </label></div>
             <div><input type="submit" value="Sign In"/></div>
         </form>
     </body>
