--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,11 +10,10 @@
 <!--  Banner -->
 <div th:replace="fragments/banner :: .banner"> menu Bar</div>
 <!--  menu -->
-<div th:replace="fragments/menuBar :: menuBar('index')">menuBar</div>
+<div th:replace="fragments/menuBar :: menuBar('index',*{role}== null ? '' : *{role})">menuBar</div>
 <!-- <h2>index [[${#httpServletRequest.remoteUser}]]</h2> -->
 
 <div class="container">
-	<div th:if="${user} == 'USER'">Text visible to user.</div>
 	<div sec:authorize="hasRole('USER')">Has Role USER</div>
 	<div sec:authorize="hasRole('ADMIN')">Has Role ADMIN</div>
 	<h2>My Case </h2>
