--- a/src/main/resources/static/css/row-col.css
+++ b/src/main/resources/static/css/row-col.css
@@ -3,70 +3,80 @@
 .col-5{
 	float: left;
 	width: 5%;
-	margin-top: 6px;
+	margin-top: 5px;
 }
 .col-tab-5 {
 	 float: left;
     width: 5%;
-    margin-top: 6px;
+    margin-top: 5px;
 }
 .col-tab-10{
 	float: left;
 	width: 10%;
-	margin-top: 6px;
+	margin-top: 5px;
+}
+.col-tab-35{
+	float: left;
+	width: 35%;
+	margin-top: 5px;
 }
 .col-10{
 	float: left;
 	width: 10%;
-	margin-top: 6px;
+	margin-top: 5px;
 }
 .col-15 {
     float: left;
     width: 15%;
-    margin-top: 6px;
+    margin-top: 5px;
 }
 .col-25 {
 	 float: left;
     width: 25%;
-    margin-top: 6px;
+    margin-top: 5px;
+}
+.col-30 {
+	 float: left;
+    width: 30%;
+    margin-top: 5px;
 }
 
 .col-65 {
     float: left;
     width: 65%;
-    margin-top: 6px;
+    margin-top: 5px;
 }
 .col-90 {
     float: left;
     width: 90%;
-    margin-top: 6px;
+    margin-top: 5px;
 }
 .col-tab-80{
     float: left;
     width: 80%;
-    margin-top: 6px;
+    margin-top: 5px;
 }
 .col-20-right{
     text-align : right;
     float: right;
     width: 20%;
-       margin-top: 6px;
+    margin-top: 5px;
 }
 .col-40-right{
     text-align : right;
     float:left;
     width: 40%;
-       margin-top: 6px;
+    margin-top: 5px;
 }
 .col-tab-60{
     float: left;
     width: 60%;
-       margin-top: 6px;
+    margin-top: 5px;
 }
 .col-100{
     float: left;
     width: 100%;
-       margin-top: 6px;
+    margin-top: 5px;
 }
 /* Clear floats after the columns */
 .row:after {
@@ -75,13 +85,13 @@
     clear: both;
 }
 @media screen and (max-width: 600px) {
-    .col-10,.col-15,.col-200right,.col-25,.col-40-right, .col-65,.col-100 input[type=submit] {
+    .col-10,.col-15,.col-200right,.col-25,.col-30,.col-40-right, .col-65,.col-100 input[type=submit] {
         width: 100%;
         margin-top: 0;
         margin-right: 10px;
         margin-left: 10px;
     }
-	.col-tab-10,.col-tab-5,.col-tab-60,.col-tab-80{
+	.col-tab-10,.col-tab-5,.col-tab-35,.col-tab-60,.col-tab-80{
 	width: 0%;
 	}
 }
