--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,23 +7,28 @@
 </head>
 <body style="font-family:Verdana;">
 <div th:replace="fragments/banner :: .banner">Banner</div>
-<form th:action="@{/register}" method="post">
+<form th:action="@{/register}" method="post" th:object="${userWeb}">
     <div class="row" >
         <div class="col-tab-35"></div>
         <div class="col-30">
             <div ><label> User Name :</label></div>
+            <text-error class="text-error" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"/>
+
         </div>
     </div>
     <div class="row" >
         <div class="col-tab-35"></div>
         <div class="col-30">
+
             <div ><input type="text" name="username"/></div>
+
         </div>
     </div>
     <div class="row">
         <div class="col-tab-35"></div>
         <div class="col-30">
             <div><label> Password:</label></div>
+            <text-error class="text-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"/>
         </div>
     </div>
     <div class="row">
@@ -60,6 +65,7 @@
         <div class="col-tab-35"></div>
         <div class="col-30">
             <div><label> Department:</label></div>
+            <text-error class="text-error" th:if="${#fields.hasErrors('department')}" th:errors="*{department}"/>
         </div>
     </div>
     <div class="row">
