change format button

--- a/src/main/resources/templates/form/formView.html
+++ b/src/main/resources/templates/form/formView.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="row">
-        <button class="buttonGreen width-10" type="button" onclick="location.href='${'/form/formEdit/'} + *{id}'">แก้ไข</button>
+        <button class="buttonGreen width-10" type="button" th:onclick="|location.href='../formEdit/'+'*{id}'|">แก้ไข</button>
     </div>
     <div class="row">
         <div class="col-tab-10"></div>
